--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -1,206 +1,182 @@
 {
-  "Login": "Login",
-  "Register": "Register",
-  "user.profile.view": "View profile",
-  "user.profile.edit": "Edit profile",
-  "auth.change-password": "Change password",
-  "Logout": "Logout",
-  "we.email.AccontActivationEmail.subject": "User account validation email",
-  "auth.register.require.email.activation": "We send an account validation email to the email account you entered with how to validate your account",
-  "login.block.form.new.account.link": "Register",
-  "widget.delete.confirm.msg": "Are you sure you want to delete this widget?",
-  "auth.confirmPassword.and.newPassword.diferent": "Confirm password and new password is diferent",
-  "auth.email.and.confirmEmail.diferent": "email and confirm email is diferent",
-  "Validation isEmail failed": "The email format is invalid",
-  "auth.login.user.incorrect.password.or.email": "Your email or password is wrong",
-  "auth.access.invalid.token": "Access token is invalid",
-  "auth.forgot-password": "Forgot password",
-  "auth.forgot-password.reset-password": "Reset password",
-  "auth.forgot-password.email.send": "Reset password email is send to your email",
-  "auth.new-password": "New password",
-  "Profile": "Profile",
-  "auth.change-password.reset-password": "Reset password",
-  "auth.change-password.success": "Your password is updated",
-  "auth.reset-password.success.can": "Your password is updated",
-  "Widget": "Widget",
-  "Edit": "Edit",
-  "Delete": "Delete",
-  "widget.add": "Add widget",
-  "widget.sort": "Sort widgets",
-  "widget.visibility": "Show the widget: ",
-  "widget.in-portal": "In all pages",
-  "widget.in-session": "In this session",
-  "widget.in-session-record": "In contents of this session",
-  "widget.in-page": "In current page",
-  "layout.select.widget.type": "Select widget type",
-  "layout.edit.hide.btn": "Save layout",
-  "layout.edit.btn": "Edit layout",
-  "image.remove": "remove image",
-  "image.selector": "Image selector",
-  "image.uploader.title": "Upload",
-  "image.selector.title": "Select from salved",
-  "image.upload.selector.btn": "Select to upload",
-  "file.image.select.btn": "select image",
-  "form-user-username": "Username",
-  "form-placeholder-user-username": " ",
-  "form-helper-user-username": "Example: santossouza",
-  "form-user-displayName": "Display name",
-  "form-user-displayName": "Display name",
-  "form-placeholder-user-displayName": " ",
-  "form-helper-user-displayName": "A name to show in this system",
-  "form-user-fullName": "Full name",
-  "form-placeholder-user-fullName": " ",
-  "form-helper-user-fullName": " ",
-  "form-user-biography": "Biography",
-  "form-helper-user-biography": " ",
-  "form-user-gender": "Gender",
-  "form-helper-user-gender": " ",
-  "form-user-email": "Email",
-  "form-placeholder-user-email": " ",
-  "form-helper-user-email": " ",
-  "form-user-organization": "Organization",
-  "form-helper-user-organization": " ",
-  "form-user-avatar": "Avatar",
-  "form-helper-user-avatar": " ",
-  "form-user-banner": "Profile banner",
-  "form-helper-user-banner": " ",
-  "form-change-password-password": "Current password",
-  "form-placeholder-change-password-password": " ",
-  "form-helper-change-password-password": " ",
-  "form-change-password-newPassword": "New password",
-  "form-placeholder-change-password-newPassword": " ",
-  "form-helper-change-password-newPassword": " ",
-  "form-change-password-rNewPassword": "Repeat your new password",
-  "form-placeholder-change-password-rNewPassword": " ",
-  "form-helper-change-password-rNewPassword": " ",
-  "form-change-password-submit": "Send",
-  "form-login-email": "Email",
-  "form-placeholder-login-email": "Write your email here ...",
-  "form-helper-login-email": "Your email",
-  "form-login-password": "password",
-  "form-placeholder-login-password": "Write your password here ...",
-  "form-helper-login-password": " ",
-  "form-login-persistent": "Remain logged in",
-  "form-login-submit": "Submit",
-  "form-register-username": "User name",
-  "form-placeholder-register-username": " ",
-  "form-helper-register-username": " ",
-  "form-register-fullName": "Full name",
-  "form-placeholder-register-fullName": " ",
-  "form-helper-register-fullName": " ",
-  "form-register-gender": "Gender",
-  "form-helper-register-gender": " ",
-  "form-register-password": "Password",
-  "form-placeholder-register-password": " ",
-  "form-helper-register-password": " ",
-  "form-register-confirmPassword": "Repeat the password",
-  "form-placeholder-register-confirmPassword": " ",
-  "form-helper-register-confirmPassword": " ",
-  "form-register-email": "Email",
-  "form-placeholder-register-email": " ",
-  "form-helper-register-email": " ",
-  "form-register-confirmEmail": "Repeat the password",
-  "form-placeholder-register-confirmEmail": " ",
-  "form-helper-register-confirmEmail": " ",
-  "form-register-organization": "Organization",
-  "form-helper-register-organization": " ",
-  "form-register-acceptTerms": "You accept your terms of use?",
-  "form-helper-register-acceptTerms": " ",
-  "form-register-submit": "Submit",
-  "form-forgot-password-email": "Email",
-  "form-placeholder-forgot-password-email": " ",
-  "form-helper-forgot-password-email": "Your account email",
-  "form-forgot-password-submit": "Submit",
-  "paginate.sumary": "{{recordsLength}} of {{count}}",
-  "select.option.text": "Select one option ...",
-
-  "menu.find": "Menus",
-  "menu.create": "Create menu",
-
-  "form-menu-name": "Name",
-  "form-placeholder-menu-name": " ",
-  "form-helper-menu-name": " ",
-
-  "form-menu-class": "Class",
-  "form-placeholder-menu-class": " ",
-  "form-helper-menu-class": " ",
-
-  "link.create": "Criar link",
-
-  "form-link-href": "HREF",
-  "form-placeholder-link-href": " ",
-  "form-helper-link-href": "Link url",
-
-  "form-link-text": "Text",
-  "form-placeholder-link-text": " ",
-  "form-helper-link-text": " ",
-
-  "form-link-title": "Title",
-  "form-placeholder-link-title": " ",
-  "form-helper-link-title": " ",
-
-  "form-link-class": "Class",
-  "form-placeholder-link-class": " ",
-  "form-helper-link-class": " ",
-
-  "form-link-style": "Style",
-  "form-placeholder-link-style": " ",
-  "form-helper-link-style": " ",
-
-  "form-link-target": "Target",
-  "form-placeholder-link-target": " ",
-  "form-helper-link-target": " ",
-
-  "form-link-rel": "Rel",
-  "form-placeholder-link-rel": " ",
-  "form-helper-link-rel": " ",
-
-  "form-link-key": "Key",
-  "form-placeholder-link-key": " ",
-  "form-helper-link-key": " ",
-
-  "form-link-depth": "Depth",
-  "form-placeholder-link-depth": " ",
-  "form-helper-link-depth": " ",
-
-  "form-link-weight": "Weight",
-  "form-placeholder-link-weight": " ",
-  "form-helper-link-weight": " ",
-
-  "form-link-parent": "Parent",
-  "form-placeholder-link-parent": " ",
-  "form-helper-link-parent": " ",
-
-  "user.find": "Users",
-  "role.find": "Roles",
-  "permission_manage": "Permissions",
-
-  "form-user-country": "Country",
-  "form-placeholder-user-country": " ",
-  "form-helper-user-country": " ",
-
-  "form-user-locationState": "State",
-  "form-placeholder-user-locationState": " ",
-  "form-helper-user-locationState": " ",
-
-  "form-user-city": "City",
-  "form-placeholder-user-city": " ",
-  "form-helper-user-city": " ",
-
-  "admin.user.roles": "Roles",
-
-  "role.create": "Create role",
-  "role.edit": "Edit role",
-
-  "form-role-name": "Name",
-  "form-placeholder-role-name": " ",
-  "form-helper-role-name": " ",
-
-  "form-role-description": "Description",
-  "form-placeholder-role-description": " ",
-  "form-helper-role-description": " ",
-
-  "form-role-permissions": "Permissions",
-  "form-placeholder-role-permissions": " ",
-  "form-helper-role-permissions": " "
+	"Login": "Login",
+	"Register": "Register",
+	"user.profile.view": "View profile",
+	"user.profile.edit": "Edit profile",
+	"auth.change-password": "Change password",
+	"Logout": "Logout",
+	"we.email.AccontActivationEmail.subject": "User account validation email",
+	"auth.register.require.email.activation": "We send an account validation email to the email account you entered with how to validate your account",
+	"login.block.form.new.account.link": "Register",
+	"widget.delete.confirm.msg": "Are you sure you want to delete this widget?",
+	"auth.confirmPassword.and.newPassword.diferent": "Confirm password and new password is diferent",
+	"auth.email.and.confirmEmail.diferent": "email and confirm email is diferent",
+	"Validation isEmail failed": "The email format is invalid",
+	"auth.login.user.incorrect.password.or.email": "Your email or password is wrong",
+	"auth.access.invalid.token": "Access token is invalid",
+	"auth.forgot-password": "Forgot password",
+	"auth.forgot-password.reset-password": "Reset password",
+	"auth.forgot-password.email.send": "Reset password email is send to your email",
+	"auth.new-password": "New password",
+	"Profile": "Profile",
+	"auth.change-password.reset-password": "Reset password",
+	"auth.change-password.success": "Your password is updated",
+	"auth.reset-password.success.can": "Your password is updated",
+	"Widget": "Widget",
+	"Edit": "Edit",
+	"Delete": "Delete",
+	"widget.add": "Add widget",
+	"widget.sort": "Sort widgets",
+	"widget.visibility": "Show the widget: ",
+	"widget.in-portal": "In all pages",
+	"widget.in-session": "In this session",
+	"widget.in-session-record": "In contents of this session",
+	"widget.in-page": "In current page",
+	"layout.select.widget.type": "Select widget type",
+	"layout.edit.hide.btn": "Save layout",
+	"layout.edit.btn": "Edit layout",
+	"image.remove": "remove image",
+	"image.selector": "Image selector",
+	"image.uploader.title": "Upload",
+	"image.selector.title": "Select from salved",
+	"image.upload.selector.btn": "Select to upload",
+	"file.image.select.btn": "select image",
+	"form-user-username": "Username",
+	"form-placeholder-user-username": " ",
+	"form-helper-user-username": "Example: santossouza",
+	"form-user-displayName": "Display name",
+	"form-placeholder-user-displayName": " ",
+	"form-helper-user-displayName": "A name to show in this system",
+	"form-user-fullName": "Full name",
+	"form-placeholder-user-fullName": " ",
+	"form-helper-user-fullName": " ",
+	"form-user-biography": "Biography",
+	"form-helper-user-biography": " ",
+	"form-user-gender": "Gender",
+	"form-helper-user-gender": " ",
+	"form-user-email": "Email",
+	"form-placeholder-user-email": " ",
+	"form-helper-user-email": " ",
+	"form-user-organization": "Organization",
+	"form-helper-user-organization": " ",
+	"form-user-avatar": "Avatar",
+	"form-helper-user-avatar": " ",
+	"form-user-banner": "Profile banner",
+	"form-helper-user-banner": " ",
+	"form-change-password-password": "Current password",
+	"form-placeholder-change-password-password": " ",
+	"form-helper-change-password-password": " ",
+	"form-change-password-newPassword": "New password",
+	"form-placeholder-change-password-newPassword": " ",
+	"form-helper-change-password-newPassword": " ",
+	"form-change-password-rNewPassword": "Repeat your new password",
+	"form-placeholder-change-password-rNewPassword": " ",
+	"form-helper-change-password-rNewPassword": " ",
+	"form-change-password-submit": "Send",
+	"form-login-email": "Email",
+	"form-placeholder-login-email": "Write your email here ...",
+	"form-helper-login-email": "Your email",
+	"form-login-password": "password",
+	"form-placeholder-login-password": "Write your password here ...",
+	"form-helper-login-password": " ",
+	"form-login-persistent": "Remain logged in",
+	"form-login-submit": "Submit",
+	"form-register-username": "User name",
+	"form-placeholder-register-username": " ",
+	"form-helper-register-username": " ",
+	"form-register-fullName": "Full name",
+	"form-placeholder-register-fullName": " ",
+	"form-helper-register-fullName": " ",
+	"form-register-gender": "Gender",
+	"form-helper-register-gender": " ",
+	"form-register-password": "Password",
+	"form-placeholder-register-password": " ",
+	"form-helper-register-password": " ",
+	"form-register-confirmPassword": "Repeat the password",
+	"form-placeholder-register-confirmPassword": " ",
+	"form-helper-register-confirmPassword": " ",
+	"form-register-email": "Email",
+	"form-placeholder-register-email": " ",
+	"form-helper-register-email": " ",
+	"form-register-confirmEmail": "Repeat the password",
+	"form-placeholder-register-confirmEmail": " ",
+	"form-helper-register-confirmEmail": " ",
+	"form-register-organization": "Organization",
+	"form-helper-register-organization": " ",
+	"form-register-acceptTerms": "You accept your terms of use?",
+	"form-helper-register-acceptTerms": " ",
+	"form-register-submit": "Submit",
+	"form-forgot-password-email": "Email",
+	"form-placeholder-forgot-password-email": " ",
+	"form-helper-forgot-password-email": "Your account email",
+	"form-forgot-password-submit": "Submit",
+	"paginate.sumary": "{{recordsLength}} of {{count}}",
+	"select.option.text": "Select one option ...",
+	"menu.find": "Menus",
+	"menu.create": "Create menu",
+	"form-menu-name": "Name",
+	"form-placeholder-menu-name": " ",
+	"form-helper-menu-name": " ",
+	"form-menu-class": "Class",
+	"form-placeholder-menu-class": " ",
+	"form-helper-menu-class": " ",
+	"link.create": "Criar link",
+	"form-link-href": "HREF",
+	"form-placeholder-link-href": " ",
+	"form-helper-link-href": "Link url",
+	"form-link-text": "Text",
+	"form-placeholder-link-text": " ",
+	"form-helper-link-text": " ",
+	"form-link-title": "Title",
+	"form-placeholder-link-title": " ",
+	"form-helper-link-title": " ",
+	"form-link-class": "Class",
+	"form-placeholder-link-class": " ",
+	"form-helper-link-class": " ",
+	"form-link-style": "Style",
+	"form-placeholder-link-style": " ",
+	"form-helper-link-style": " ",
+	"form-link-target": "Target",
+	"form-placeholder-link-target": " ",
+	"form-helper-link-target": " ",
+	"form-link-rel": "Rel",
+	"form-placeholder-link-rel": " ",
+	"form-helper-link-rel": " ",
+	"form-link-key": "Key",
+	"form-placeholder-link-key": " ",
+	"form-helper-link-key": " ",
+	"form-link-depth": "Depth",
+	"form-placeholder-link-depth": " ",
+	"form-helper-link-depth": " ",
+	"form-link-weight": "Weight",
+	"form-placeholder-link-weight": " ",
+	"form-helper-link-weight": " ",
+	"form-link-parent": "Parent",
+	"form-placeholder-link-parent": " ",
+	"form-helper-link-parent": " ",
+	"user.find": "Users",
+	"role.find": "Roles",
+	"permission_manage": "Permissions",
+	"form-user-country": "Country",
+	"form-placeholder-user-country": " ",
+	"form-helper-user-country": " ",
+	"form-user-locationState": "State",
+	"form-placeholder-user-locationState": " ",
+	"form-helper-user-locationState": " ",
+	"form-user-city": "City",
+	"form-placeholder-user-city": " ",
+	"form-helper-user-city": " ",
+	"admin.user.roles": "Roles",
+	"role.create": "Create role",
+	"role.edit": "Edit role",
+	"form-role-name": "Name",
+	"form-placeholder-role-name": " ",
+	"form-helper-role-name": " ",
+	"form-role-description": "Description",
+	"form-placeholder-role-description": " ",
+	"form-helper-role-description": " ",
+	"form-role-permissions": "Permissions",
+	"form-placeholder-role-permissions": " ",
+	"form-helper-role-permissions": " ",
+	"user.create": "user.create"
 }
