--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -125,6 +125,6 @@
   "form-helper-new-password-newPassword": " ",
   "form-helper-new-password-rNewPassword": " ",
   "paginate.sumary": "Exibindo {{recordsLength}} de {{count}}",
-  "widget-html-label": "Texto ou HTML customizado",
-  "widget-passport-strategies-label": "Opções de autenticação"
+  "widget.html.label": "Texto ou HTML customizado",
+  "widget.passport-strategies.label": "Opções de autenticação"
 }
