--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -182,5 +182,15 @@
 	"widget.html.label": "HTML or text block",
 	"widget.passport-strategies.label": "Authentication options block",
 	"permission.link": "Permissions",
-	"users.link": "Users"
+	"users.link": "Users",
+  "urlAlias.find": "URL alias",
+  "urlAlias.create": "Add url alias",
+  "form-urlAlias-alias": "Alias",
+  "form-helper-urlAlias-alias": "This url will be used for acess the resource, exemple: /my-awsome-article",
+  "form-placeholder-urlAlias-alias": " ",
+  "form-urlAlias-target": "Target",
+  "form-helper-urlAlias-target": "The target and permanet path like: /user/1",
+  "form-placeholder-urlAlias-target": " ",
+  "urlAlias.delete": "Delete a url alias",
+  "urlAlias.delete.confirm.msg": "Are you sure you want to delete this url alias?"
 }
