--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -193,5 +193,7 @@
   "form-placeholder-urlAlias-target": " ",
   "urlAlias.delete": "Delete a url alias",
   "urlAlias.delete.confirm.msg": "Are you sure you want to delete this url alias?",
-  "url.alias.user": "users"
+  "url.alias.user": "users",
+  "widget.update": "Update widget",
+  "widget.create": "Create widget"
 }
