--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -25,6 +25,7 @@
 	"Widget": "Widget",
 	"Edit": "Edit",
 	"Delete": "Delete",
+  "widget.context": "Widget context",
 	"widget.add": "Add widget",
 	"widget.sort": "Sort widgets",
 	"widget.visibility": "Show the widget: ",
@@ -32,6 +33,7 @@
 	"widget.in-session": "In this session",
 	"widget.in-session-record": "In contents of this session",
 	"widget.in-page": "In current page",
+	"widget.in-context": "In current context",
 	"layout.select.widget.type": "Select widget type",
 	"layout.edit.hide.btn": "Save layout",
 	"layout.edit.btn": "Edit layout",
