--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -143,5 +143,6 @@
   "url.alias.user": "usuarios",
   "widget.update": "Atualizar widget",
   "widget.create": "Criar widget",
-  "auth.register.spam": "O seu email {{email}} está marcado como spam pelo google recaptcha"
+  "auth.register.spam": "O seu email {{email}} está marcado como spam pelo google recaptcha",
+  "auth.login.authenticated.msg": "Você está autenticado, <a href='/auth/logout'>clique aqui</a> para sair do sistema"
 }
