--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -199,5 +199,6 @@
   "widget.update": "Update widget",
   "widget.create": "Create widget",
   "auth.register.spam": "You email {{email}} is marked as span by google recaptcha",
-   "auth.login.authenticated.msg": "You are authenticated, <a href='/auth/logout'>click here</a> to logout"
+  "auth.login.authenticated.msg": "You are authenticated, <a href='/auth/logout'>click here</a> to logout",
+  "Home": "Home"
 }
