fix gender label and add pt-br localization for wejs/we#113

--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -145,5 +145,7 @@
   "widget.create": "Criar widget",
   "auth.register.spam": "O seu email {{email}} está marcado como spam pelo google recaptcha",
   "auth.login.authenticated.msg": "Você está autenticado, <a href='/auth/logout'>clique aqui</a> para sair do sistema",
-  "Home": "Início"
+  "Home": "Início",
+  "Male": "Masculino",
+  "Female": "Feminino"
 }
