Enhancement in error messages and translating wejs/we#112

--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -10,19 +10,19 @@
 	"login.block.button.text": "login.block.button.text",
 	"login.block.form.new.account.link": "login.block.form.new.account.link",
 	"widget.delete.confirm.msg": "Vocẽ tem certeza que deseja deletar esse widget?",
-	"auth.confirmPassword.and.newPassword.diferent": "auth.confirmPassword.and.newPassword.diferent",
-	"auth.email.and.confirmEmail.diferent": "auth.email.and.confirmEmail.diferent",
+	"auth.confirmPassword.and.newPassword.diferent": "A senha de confirmação e a nova senha são diferentes.",
+	"auth.email.and.confirmEmail.diferent": "O e-mail de confirmação é diferente do e-mail informado.",
 	"Validation isEmail failed": "O formato do email é inválido",
-	"auth.login.user.incorrect.password.or.email": "auth.login.user.incorrect.password.or.email",
+	"auth.login.user.incorrect.password.or.email": "Email ou senha incorretos.",
 	"auth.access.invalid.token": "O token de autenticação está inválido",
 	"auth.forgot-password": "Mudar senha",
-	"auth.forgot-password.reset-password": "auth.forgot-password.reset-password",
-	"auth.forgot-password.email.send": "auth.forgot-password.email.send",
+	"auth.forgot-password.reset-password": "Redefinir senha",
+	"auth.forgot-password.email.send": "A nova senha foi enviada para seu email.",
 	"auth.new-password": "Nova senha",
 	"Profile": "Perfil",
-	"auth.change-password.reset-password": "auth.change-password.reset-password",
-	"auth.change-password.success": "auth.change-password.success",
-	"auth.reset-password.success.can": "auth.reset-password.success.can",
+	"auth.change-password.reset-password": "Redefinir senha",
+	"auth.change-password.success": "Sua senha foi atualizada.",
+	"auth.reset-password.success.can": "Sua senha foi atualizada.",
 	"Widget": "Widget",
 	"Edit": "Editar",
 	"Delete": "Deletar",
@@ -130,21 +130,21 @@
   "widget.passport-strategies.label": "Opções de autenticação",
   "permission.link": "Permissões",
   "users.link": "Usuários",
-  "urlAlias.find": "Urls alias",
-  "urlAlias.create": "Add url alias",
-  "form-urlAlias-alias": "Url de acesso",
-  "form-helper-urlAlias-alias": "Essa url que o usuário vai usar para acessar a página original por exemplo /meu-artigo-legal",
+  "urlAlias.find": "URLs alias",
+  "urlAlias.create": "Adicionar alias de URL",
+  "form-urlAlias-alias": "URL de acesso",
+  "form-helper-urlAlias-alias": "Esta é a URL que o usuário irá usar para acessar a página original, por exemplo: /meu-artigo-legal",
   "form-placeholder-urlAlias-alias": " ",
   "form-urlAlias-target": "Url original",
-  "form-helper-urlAlias-target": "ANormalmente um link permanente por exemplo: /user/1",
+  "form-helper-urlAlias-target": "Normalmente um link permanente, por exemplo: /user/1",
   "form-placeholder-urlAlias-target": " ",
-  "urlAlias.delete": "Deleter a url alias",
-  "urlAlias.delete.confirm.msg": "Você tem certeza que deseja deletar essa url?",
-  "url.alias.user": "usuarios",
+  "urlAlias.delete": "Deletar a URL alias",
+  "urlAlias.delete.confirm.msg": "Você tem certeza que deseja deletar esta URL?",
+  "url.alias.user": "usuários",
   "widget.update": "Atualizar widget",
   "widget.create": "Criar widget",
-  "auth.register.spam": "O seu email {{email}} está marcado como spam pelo google recaptcha",
-  "auth.login.authenticated.msg": "Você está autenticado, <a href='/auth/logout'>clique aqui</a> para sair do sistema",
+  "auth.register.spam": "O seu email {{email}} está marcado como spam pelo Google Recaptcha.",
+  "auth.login.authenticated.msg": "Você está autenticado, <a href='/auth/logout'>clique aqui para sair do sistema</a>.",
   "Home": "Início",
   "Male": "Masculino",
   "Female": "Feminino"
