--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -9,14 +9,14 @@
 	"auth.register.require.email.activation": "We send an account validation email to the email account you entered with how to validate your account",
 	"login.block.form.new.account.link": "Register",
 	"widget.delete.confirm.msg": "Are you sure you want to delete this widget?",
-	"auth.confirmPassword.and.newPassword.diferent": "Confirm password and new password is diferent",
-	"auth.email.and.confirmEmail.diferent": "email and confirm email is diferent",
+	"auth.confirmPassword.and.newPassword.diferent": "Confirm password and new password are diferent",
+	"auth.email.and.confirmEmail.diferent": "Email and confirm email are diferent",
 	"Validation isEmail failed": "The email format is invalid",
 	"auth.login.user.incorrect.password.or.email": "Your email or password is wrong",
 	"auth.access.invalid.token": "Access token is invalid",
 	"auth.forgot-password": "Forgot password",
 	"auth.forgot-password.reset-password": "Reset password",
-	"auth.forgot-password.email.send": "Reset password email is send to your email",
+	"auth.forgot-password.email.send": "Reset password email was sent to your email",
 	"auth.new-password": "New password",
 	"Profile": "Profile",
 	"auth.change-password.reset-password": "Reset password",
@@ -105,7 +105,7 @@
 	"form-helper-register-confirmEmail": " ",
 	"form-register-organization": "Organization",
 	"form-helper-register-organization": " ",
-	"form-register-acceptTerms": "You accept your terms of use?",
+	"form-register-acceptTerms": "Do you accept the terms of use?",
 	"form-helper-register-acceptTerms": " ",
 	"form-register-submit": "Submit",
 	"form-forgot-password-email": "Email",
@@ -188,17 +188,17 @@
   "urlAlias.find": "URL alias",
   "urlAlias.create": "Add url alias",
   "form-urlAlias-alias": "Alias",
-  "form-helper-urlAlias-alias": "This url will be used for acess the resource, exemple: /my-awsome-article",
+  "form-helper-urlAlias-alias": "This URL will be used for acess the resource, for example: /my-awsome-article",
   "form-placeholder-urlAlias-alias": " ",
   "form-urlAlias-target": "Target",
-  "form-helper-urlAlias-target": "The target and permanet path like: /user/1",
+  "form-helper-urlAlias-target": "The target and permanent path like: /user/1",
   "form-placeholder-urlAlias-target": " ",
   "urlAlias.delete": "Delete a url alias",
-  "urlAlias.delete.confirm.msg": "Are you sure you want to delete this url alias?",
+  "urlAlias.delete.confirm.msg": "Are you sure you want to delete this URL alias?",
   "url.alias.user": "users",
   "widget.update": "Update widget",
   "widget.create": "Create widget",
-  "auth.register.spam": "You email {{email}} is marked as span by google recaptcha",
-  "auth.login.authenticated.msg": "You are authenticated, <a href='/auth/logout'>click here</a> to logout",
+  "auth.register.spam": "You email {{email}} is marked as span by Google Recaptcha",
+  "auth.login.authenticated.msg": "You are authenticated, <a href='/auth/logout'>click here to logout</a>",
   "Home": "Home"
 }
