add alt attr in login widget icons

--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -211,5 +211,6 @@
   "form-placeholder-user-updatedAt": " ",
   "form-user-createdAt ": "Created at:",
   "form-helper-user-createdAt ": " ",
-  "form-placeholder-user-createdAt ": " "
+  "form-placeholder-user-createdAt ": " ",
+  "passport.strategy.local": "Login with system email and password"
 }
