--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -152,5 +152,6 @@
   "form-placeholder-user-setAlias": " ",
   "form-helper-user-setAlias": "Digite uma url interna para acessar o seu perfil ou deixe o campo vazio para usar a url padrão. Exemplo: /batman",
   "updatedAt": "Atualizado em",
-  "createdAt": "Criado em"
+  "createdAt": "Criado em",
+  "passport.strategy.local": "Se autenticar usando o email e senha criados no sistema"
 }
