--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -153,5 +153,6 @@
   "form-helper-user-setAlias": "Digite uma url interna para acessar o seu perfil ou deixe o campo vazio para usar a url padrão. Exemplo: /batman",
   "updatedAt": "Atualizado em",
   "createdAt": "Criado em",
-  "passport.strategy.local": "Se autenticar usando o email e senha criados no sistema"
+  "passport.strategy.local": "Se autenticar usando o email e senha criados no sistema",
+  "Create": "Criar"
 }
