add suport to selec if widget type is avaible for selection and add suport to return erros in widget.beforeSend

--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -212,5 +212,6 @@
   "form-user-createdAt ": "Created at:",
   "form-helper-user-createdAt ": " ",
   "form-placeholder-user-createdAt ": " ",
-  "passport.strategy.local": "Login with system email and password"
+  "passport.strategy.local": "Login with system email and password",
+  "widget.invalid.context": "Invalid widget context"
 }
