--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -155,5 +155,6 @@
   "createdAt": "Criado em",
   "passport.strategy.local": "Se autenticar usando o email e senha criados no sistema",
   "Create": "Criar",
-  "user.find": "Usuários"
+  "user.find": "Usuários",
+  "widget.invalid.context": "O contexto do widget é inválido"
 }
