update roles feature to use we.config and add suport to export roles to config file

--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -232,5 +232,7 @@
   "skip.to.content.link.text": "Skip to main content",
 
   "Privacity": "Privacity",
-  "user.privacity.fieldName": "Data"
+  "user.privacity.fieldName": "Data",
+
+  "role.delete.confirm.msg": "Are you sure you want to delete this role?"
 }
