--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -176,5 +176,6 @@
   "Privacity": "Privacidade",
   "user.privacity.fieldName": "Dados",
 
-  "role.delete.confirm.msg": "Tem certeza que deseja deletar esse perfil de usuário?"
+  "role.delete.confirm.msg": "Tem certeza que deseja deletar esse perfil de usuário?",
+  "auth.login.wrong.email.or.password": "Seu email ou senhas estão incorretos ou você não está registrado no sistema"
 }
