--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -234,5 +234,6 @@
   "Privacity": "Privacity",
   "user.privacity.fieldName": "Data",
 
-  "role.delete.confirm.msg": "Are you sure you want to delete this role?"
+  "role.delete.confirm.msg": "Are you sure you want to delete this role?",
+  "auth.login.wrong.email.or.password": "Your email or password is wrong or you dont are registered in this system"
 }
